--- a/src/w3schools-how-to/LoginForm/LoginForm.css
+++ b/src/w3schools-how-to/LoginForm/LoginForm.css
@@ -21,11 +21,21 @@
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+@keyframes animatezoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
 .LoginForm {
   margin: 5% auto;
   width: 40%;
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
+  animation: animatezoom 1s;
 }
 
 .modal-close {
@@ -35,6 +45,11 @@
 
 .close-icon {
   cursor: pointer;
+}
+
+.account-icon {
+  display: flex;
+  justify-content: center;
 }
 
 form {
