--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,10 @@
   height: 100%;
 }
 
+body {
+  margin: 0;
+}
+
 .material-symbols-rounded {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
